--- a/src/components/Cart/Checkout/index.module.css
+++ b/src/components/Cart/Checkout/index.module.css
@@ -18,7 +18,6 @@
     flex-flow: column;
     background-color: #fff;
     border-radius: 50rem;
-    padding: 30rem;
     margin: 0 20rem;
     overflow: hidden;
 }
@@ -27,7 +26,7 @@
     display: block;
     font-size: 35rem;
     font-weight: bold;
-    padding-bottom: 20rem;
+    padding: 20rem 30rem 30rem;
     border-bottom: 2rem solid #f2f2f2;
 }
 
@@ -48,6 +47,7 @@
 .list {
     max-height: 800rem;
     overflow: auto;
+    padding: 0 30rem;
 }
 
 .total {
@@ -56,7 +56,6 @@
     justify-content: flex-end;
     font-size: 35rem;
     font-weight: bold;
-    margin-top: 30rem;
 }
 
 .total::before {
@@ -67,6 +66,7 @@
 .footer {
     position: relative;
     border-top: 2rem #f2f2f2 dashed;
+    padding: 30rem;
 }
 
 .footer::after,
