--- a/src/components/Cart/ShopCar/index.module.css
+++ b/src/components/Cart/ShopCar/index.module.css
@@ -8,7 +8,7 @@
     border-top-left-radius: 50rem;
     border-top-right-radius: 50rem;
     background-color: #fff;
-    max-height: 1200rem;
+    max-height: 1300rem;
     z-index: 999;
     padding-bottom: 170rem;
 }
@@ -32,6 +32,7 @@
 
 .list {
     overflow: auto;
+    padding:50rem;
 }
 
 .shoppingCart {
